[project]
name = "pyhrp"
version = "2.0.0"
description = "Hierarchial risk parity"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvx-linalg>=0.5.1,<1",
    "numpy>=2.3",
    "plotly>=5,<7",
    "polars>=1.40.1,<2",
    "scipy>=1.14.1",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/tschm/pyhrp"
homepage = "https://tschm.github.io/pyhrp"
Changelog = "https://github.com/tschm/pyhrp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "kaleido>=1.3.0",
    "marimo>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhrp"]

[tool.coverage.report]
fail_under = 90

[tool.deptry]
package_module_name_map = {"cvx-linalg" = "cvx", numpy = "numpy", scipy = "scipy", marimo = "marimo", polars = "polars", plotly = "plotly"}
ignore = ["DEP004"]
extend_exclude = [".rhiza"]
