[project]
name = "pyhrp"
version = "2.2.5"
description = "Cluster-based portfolio allocation: HRP, Schur risk parity, and 1/N"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0,<3",
    "plotly>=5,<7",
    "polars>=1.0,<2",
    "scipy>=1.11",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
repository = "https://github.com/tschm/pyhrp"
homepage = "https://tschm.github.io/pyhrp"
Changelog = "https://github.com/tschm/pyhrp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hypothesis>=6.150.0",
    "hypothesis[numpy]>=6.150.0",
    "kaleido>=1.3.0",
    "marimo>=0.14.9",
    "pytest-benchmark>=5.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhrp"]

[tool.coverage.report]
fail_under = 90

[tool.deptry]
package_module_name_map = {numpy = "numpy", scipy = "scipy", marimo = "marimo", polars = "polars", plotly = "plotly"}
ignore = ["DEP004"]
extend_exclude = [".rhiza"]
